<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.ProductDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/product_image_description" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_marginHorizontal="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    tools:text="Nombre Producto"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvLastPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Last Price"/>

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Price"
                            android:textSize="22sp"
                            android:textStyle="bold"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipCredit_true"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/credit_true"
                            app:chipIcon="@drawable/ic_credit_card"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipCredit_false"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/credit_false"
                            app:chipIcon="@drawable/ic_money"
                            android:visibility="gone"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btContact"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:text="@string/contact_button_text"
                        android:drawableEnd="@drawable/ic_email"
                        android:drawableTint="@color/text_icons"/>

                </LinearLayout>


                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_description_subtitle"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Descripcion"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>